Added images and basic html/css

--- a/wwwroot/Index.html
+++ b/wwwroot/Index.html
@@ -3,8 +3,43 @@
 <head>
     <meta charset="utf-8" />
     <title>Dutch Treat</title>
+    <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Dutch Treat</h1>
+    <h2>Dutch Treat</h2>
+    <div class="product-info">
+        <img src="/img/VanGogh.jpg" />
+        <h3>Mug</h3>
+        <ul class="product-props">
+            <li>Price: $9.99</li>
+            <li>Artist: Van Gogh</li>
+            <li>Title: </li>
+            <li>Description: Self-potrait</li>
+        </ul>
+        <button>Buy</button>
+    </div>
+
+
+    <div id="theForm">
+        <form>
+            <label>Username: </label>
+            <br />
+            <input />
+            <br />
+            <label>Email: </label>
+            <br />
+            <input type="email" />
+            <br />
+            <label>Subject: </label>
+            <br />
+            <input type="text" />
+            <br />
+            <label>Message: </label>
+            <br />
+            <textarea rows="4"></textarea>
+            <br />
+            <input type="submit" namevalue="Send Message" />
+        </form>
+    </div>
 </body>
 </html>
