Added javascript, jquery, bootstrap and npm

--- a/wwwroot/Index.html
+++ b/wwwroot/Index.html
@@ -16,7 +16,7 @@
             <li>Title: </li>
             <li>Description: Self-potrait</li>
         </ul>
-        <button>Buy</button>
+        <button id="buyButton">Buy</button>
     </div>
 
 
@@ -41,5 +41,6 @@
             <input type="submit" namevalue="Send Message" />
         </form>
     </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
