--- a/wwwroot/Index.html
+++ b/wwwroot/Index.html
@@ -41,6 +41,27 @@
             <input type="submit" namevalue="Send Message" />
         </form>
     </div>
+    <div>
+        <div id="loginToggle">Login</div>
+        <form class="popup-form">
+            <div>
+                <label>Username</label>
+                <input />
+            </div>
+            <div>
+                <label>Password</label>
+                <input type="password"/>
+            </div>
+            <div>
+                <input type="checkbox"/>
+                <label>Remember Me?</label>
+            </div>
+            <div>
+                <input type="submit" value="Login" />
+            </div>
+        </form>
+    </div>
+    <script src="lib/js/vendor.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
